refactor : 사용하지 않는 딜러 결과 함수 제거